--- a/web/src/index.html
+++ b/web/src/index.html
@@ -657,52 +657,9 @@
 		</div>
 
 
-		<!-- eStat -->
-		<script language="JavaScript">
-		<!--
-		var _PJS=0;
-		//-->
-		</script>
 		<script language="JavaScript" src="http://prof.estat.com/js/279079202460.js"></script>
-		<script language="JavaScript">
-		<!--
-		if(_PJS) {
-		  eStat_id.cmclient("sites-evenementiels");
-		  eStat_id.niveau(1, "100_tours_de_france");
-		  eStat_id.niveau(2, "homepage");
-		  eStat_id.niveau(3, "homepage");
-		  eStat_id.niveau(4, "homepage");
-		  eStat_tag.post("ml");
-		  eStat_id.cmclient("sites-evenementiels");
-		}
-		//-->
-		</script>
-		<noscript>
-		<img src="http://stat3.cybermonitor.com/sites-evenementiels_v?c=100_tours_de_france&p=homepage&l3=homepage&l4=homepage&st=0&sjs=0" border="0" width="1" height="1" />
-		</noscript>
-		<!-- /eStat -->
 
-
-		<script type="text/javascript">
-		<!--
-		xtnv = document;        //parent.document or top.document or document
-		xtsd = "http://logp";
-		xtsite = "24121";
-		xtn2 = "73";        // level 2 site ID
-		xtpage = "100_tours_de_france::homepage::homepage::homepage";        //page name (with the use of :: to create chapters)
-		xtdi = "";        //implication degree
-		xt_multc = "";  //all the xi indicators (like "&x1=...&x2=....&x3=...")
-		xt_an = "";        //user ID
-		xt_ac = "";        //category ID
-		//do not modify below
-		if (window.xtparam!=null){window.xtparam+="&ac="+xt_ac+"&an="+xt_an+xt_multc;}
-		else{window.xtparam="&ac="+xt_ac+"&an="+xt_an+xt_multc;};
-		//-->
-		</script>
 		<script type="text/javascript" src="http://oblique.radiofrance.fr/files/xtcore.js"></script>
-		<noscript>
-		<img width="1" height="1" alt="" src="http://logp.xiti.com/hit.xiti?s=24121&s2=73&p=100_tours_de_france::homepage::homepage::homepage&di=&an=&ac=" >
-		</noscript>
 
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -711,7 +668,7 @@
 		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 		  ga('create', 'UA-7571900-21', 'radiofrance.fr');
-		  ga('send', 'pageview');
+		  // ga('send', 'pageview');
 
 		</script>
 
